    it to C by default.
  * t/180_ecpg.t: Ensure that test.pgc is readable for nobody.
  * debian/tests/system: Run the packaged tests instead of the ones in the
    local build tree.
  * debian/tests/system: Unset $TMPDIR so that 'postgres' and 'nobody' do not
    fall over the autopkgtest provided $TMPDIR which is not world writable.

  [ Christoph Berg ]
  * pg_buildext: Also set DESTDIR and VPATH for the configure, build and clean
    targets.
  * Add myself to Uploaders.

 -- Martin Pitt <mpitt@debian.org>  Fri, 18 May 2012 14:11:01 +0200

postgresql-common (130) unstable; urgency=low

  [ Christoph Berg ]
  * pg_ctlcluster: Add 'promote' action.
  * pg_updatedicts: Fix a typo.
  * pg_lsclusters, PgCommon.pm: Show "recovery" in status column.
  * pg_createcluster: Fix a doc typo.

  [ Martin Pitt ]
  * Add support for 9.2:
    - pg_createcluster: Add 9.2 configuration method.
    - t/060_obsolete_confparams.t: Add full configuration for 9.1 to test the
      configuration update to 9.2.
    - pg_upgradecluster: On upgrades to 9.2, deprecate the 'wal_sender_delay',
      'silent_mode', and 'custom_variable_classes' postgresql.conf options, as
      they do not exist any more.
    - pg_upgradecluster: In the tablespace test, don't query the "spclocation"
      column, which does not exist any more in 9.2. Just check whether we have
      any table space other than the two default ones.
    - t/050_encodings.t: Adjust expected "invalid UTF-8" error to also match
      the 9.2 format.
    - t/170_extensions.t: Adjust the "hstore" exfail to only apply to 9.1.
      9.2's version works without a warning.
  * debian/backport-ppa: Update Ubuntu releases.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 May 2012 13:44:17 +0200

postgresql-common (129) unstable; urgency=low

  * pg_ctlcluster: Fix wrong configuration file name in documentation, thanks
    Peter Eisentraut. (Closes: #653098)
  * t/050_encodings.t: Add alternative Russian translation for expected error